<resources>
    <string name="app_name">CoinkSimpleRegisterSimulator</string>

    <!-- entry fragment strings -->
    <string name="la_alcancia_que_siempre_te_acompana">LA ALCANCIA QUE SIEMPRE \nTE ACOMPAÑA</string>
    <string name="registrate">REGÍSTRATE</string>
    <string name="ingresa">INGRESA</string>

    <!-- phone number fragment -->
    <string name="phone_fargment_tb_text">NÚMERO CELULAR</string>
    <string name="modal_msg_1">Para comenzar, por favor \ningresa tu <b>numero celular</b></string>
    <string name="phone_number_hint">(XXX-XXXXXXX)</string>

    <!-- user info fragment -->
    <string name="cuales_son_tus_datos">¿CUÁLES SON TUS DATOS?</string>
    <string name="user_info_tb_text">DATOS DE CUENTA</string>
    <string name="modal_msg_2">Ahora necesitamos saber \nalgunos datos tuyos</string>
    <string name="documento_de_identidad">Documento de identidad</string>
    <string name="tipo_de_documento">Tipo de Documento</string>
    <string name="numero_de_doumento">Número de Doumento</string>
    <string name="genero">Género</string>
    <string name="fecha_de_expedicion_del_documento">Fecha de expedición del documento (DD/MM/AAAA)</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento (DD/MM/AAAA)</string>
    <string name="configura_tu_cuenta">Configura Tu Cuenta</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="confirmar_correo_electronico">Confirmar Correo Electrónico</string>
    <string name="pin_de_seguridad">PIN de seguridad</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="confirma_pin_de_seguiridad">Confirma PIN de Seguiridad</string>

    <!-- Modal messages -->
    <string name="error_en_el_tipo_de_documento">Error en el tipo de documento</string>
    <string name="documento_invalido">Documento invalido</string>
    <string name="seleccione_una_de_las_opciones">Seleccione una de las opciones</string>
    <string name="error_en_la_fecha_de_expedicion">Error en la fecha de expedición</string>
    <string name="error_en_la_fecha_de_nacimiento">Error en la fecha de nacimiento</string>
    <string name="formato_no_valido">Formato no válido</string>
    <string name="error_tipo_de_genero">Error en el tipo de género</string>
    <string name="elija_un_tipo_de_genero">Elija un tipo de género</string>
    <string name="correo_no_valido">Correo no valido</string>
    <string name="pin_no_valido">Pin no valido</string>
    <string name="correo_no_coincide">Correo no coincide</string>
    <string name="pin_no_coincide">Pin no coincide</string>

    <!-- Userinfo ViewModel -->
    <string name="error_en_el_servodor">Error en el servidor</string>

    <!-- contract fragment -->
    <string name="contract_fragment_tb_text">FINALIZAR</string>
    <string name="contract_msg_1">ESTAS MUY CERCA DE \nSER PARTE DE COINK</string>
    <string name="contarct_msg_2">Solo es necesario que leas \ndetenidamente el contrato que se \nencuentra al final de esta pantalla y \nlo aceptes.</string>
    <string name="contract_msg_3">LO MÁS IMPORTANTE</string>
    <string name="contract_msg_4">Para la apertura del Depósito de Bajo Monto en COINK debes ser una persona natural que de acuerdo con nuestra legislación vigente te encuentres en plena capacidad para adquirir derechos y contraer obligaciones.\n\nAbrirás una cuenta COINK de Bajo Monto la cual te permitirá tener un saldo hasta por 8 salarios mínimos en el mes y realizar débitos por el mismo valor. Si deseas sobrepasar estos límites debes solicitarnos la apertura de un Depósito Ordinario COINK Persona Natural.\n\nSolo puedes tener una cuenta COINK de Bajo Monto y podrás utilizar tu dispositivo móvil para consultar tu saldo, tus movimientos, realizar tus transacciones y administrar tu cuenta.\n\nRecuerda que no necesitas saldo mínimo ni monto inicial para su apertura.</string>
    <string name="contract_msg_5">Lee tu contrato</string>
    <string name="contract_msg_6">He leído ya acepto el contrato</string>
    <string name="btn_text_aceptar">Aceptar</string>

    <!-- successful register frgment -->
    <string name="welcome_msg_1">¡Bienvenido a Coink!</string>
    <string name="wellcome_msg_2">¡Cuenta creada exitosamente, \ntu marrano ya está listo \npara que empieces a ahorrar!</string>

    <!-- digits strings-->
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="digit_0">0</string>
    <!-- TODO: Remove or change this placeholder text -->





</resources>